perf: improvements and style changes - made header part simpler - combined about section and search-bar - fixed gap issue between card and recents

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 .header {
     height: 15rem;
     width: 100%;
-    background-color: rgb(232, 231, 150) ;  /* rgb(255, 120, 155) */
+    background-color: rgb(102, 103, 96) ;  /* subtle yellowrgb(232, 231, 150)  or rgb(255, 120, 155) */
     /* border-bottom-right-radius: 1rem;
     border-bottom-left-radius: 1rem; */
 }
@@ -33,9 +33,8 @@
     /* background-image: linear-gradient(45deg, rgb(198, 235, 97), rgb(76, 117, 150)); */
     display:flex;
     justify-content: center;
-    background-color:  rgb(155, 160, 122) ;/* rgb(155, 160, 122) */
-    border-bottom-right-radius: 1.1rem;
-    border-bottom-left-radius: 1.1rem;
+    background-color:  rgb(205, 216, 182) ;/* rgb(155, 160, 122) */
+    
 }
 
 .header_main h2 {
@@ -72,7 +71,7 @@
 
 /* SEARCH */
 .search_wrapper {
-    background-color: rgb(231, 236, 241);
+    background-color: rgb(102, 103, 96);
     padding: 1rem;
     display: flex;
     justify-content: center;
@@ -378,11 +377,6 @@ footer {
     .search_wrapper{
         padding-left: 20px;
     }
-    .header_main {
-    } 
-
-    .search_title {
-    }
     .recents_container {
         width: 90%;
      }
@@ -393,10 +387,6 @@ footer {
 @media (min-width:500px) and (max-width: 569px){
     .search_wrapper{
         padding-left: 25px;
-    }
-    .header_main {
-    } 
-    .search_title {
     }
     /* search button bottom border fix */
     #search_btn {
@@ -418,11 +408,7 @@ footer {
     .card_container {
         padding-top: 1.3rem;
     }
-    .header_main {
-        
-    } 
-    .search_title {
-    }
+    
     /* search button bottom border fix */
     #search_btn {
         height: 2.7rem ;
@@ -443,8 +429,7 @@ footer {
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
     }
-    .search_title{
-    }
+    
     .header_options {
         font-size: 18px;
     }
@@ -458,9 +443,7 @@ footer {
      .recents_container {
         width: 90%;
      }
-
 }
-
 
 
 /* 300px to 399px */
@@ -546,10 +529,8 @@ footer {
         height: 2.85rem;
      }
      
-
      .recents_container {
         width: 90%;
-        height: 20px;
      }
 }
 
@@ -557,7 +538,7 @@ footer {
 @media (max-width: 899px) {
     .card_container {
         display: grid;
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-rows: auto auto;
         gap: 1rem;
     }
     .recents_container {
